--- a/share/templates/widgets/admin_topmenu_settings.tt
+++ b/share/templates/widgets/admin_topmenu_settings.tt
@@ -19,7 +19,7 @@
         <b class="caret"></b>
     </a>
     <ul class="dropdown-menu">
-        <li><a href="[% c.uri_for('/statistics') %]">[% c.loc('System Statistics') %]</a></li>
+        <li><a href="/grafana/dashboard/file/system-statistics.json" target="_blank">[% c.loc('System Statistics') %]</a></li>
         [% IF c.config.features.callflow -%]
         <li><a href="[% c.uri_for('/callflow') %]">[% c.loc('SIP Call Flows') %]</a></li>
         [% END -%]
