--- a/share/templates/widgets/admin_topmenu_settings.tt
+++ b/share/templates/widgets/admin_topmenu_settings.tt
@@ -8,7 +8,7 @@
         <li><a href="[% c.uri_for('/api/') %]" class="ngcp-noback-link">[% c.loc('API') %]</a></li>
         <li><a href="[% c.uri_for('/handbook/') %]" class="ngcp-noback-link">[% c.loc('Handbook') %]</a></li>
         [% FOR l IN c.config.external_documentation.link -%]
-            <li><a href="[% l.url %]" class="ngcp-noback-link">[% l.name | html %]</a></li>
+            <li><a href="[% l.url %]" class="ngcp-noback-link" target="_blank">[% l.name | html %]</a></li>
         [% END; -%]
     </ul>
 </li>
@@ -19,7 +19,7 @@
         <b class="caret"></b>
     </a>
     <ul class="dropdown-menu">
-        <li><a href="[% c.uri_for('/statistics') %]">[% c.loc('System Statistics') %]</a></li>
+        <li><a href="/grafana/dashboard/file/system-statistics.json">[% c.loc('System Statistics') %]</a></li>
         [% IF c.config.features.callflow -%]
         <li><a href="[% c.uri_for('/callflow') %]">[% c.loc('SIP Call Flows') %]</a></li>
         [% END -%]
