--- a/share/templates/widgets/admin_topmenu_settings.tt
+++ b/share/templates/widgets/admin_topmenu_settings.tt
@@ -21,6 +21,7 @@
     <ul class="dropdown-menu">
         <li><a href="/grafana/dashboard/file/system-statistics.json" class="ngcp-noback-link" target="_blank">[% c.loc('System Statistics') %]</a></li>
         <li><a href="/grafana/dashboard/file/sip-statistics.json" class="ngcp-noback-link" target="_blank">[% c.loc('SIP Statistics') %]</a></li>
+        <li><a href="/grafana/dashboard/file/database-statistics.json" class="ngcp-noback-link" target="_blank">[% c.loc('DB Statistics') %]</a></li>
         <li><a href="/grafana/dashboard/file/cluster-overview.json" class="ngcp-noback-link" target="_blank">[% c.loc('Cluster Overview') %]</a></li>
         [% IF c.config.features.callflow -%]
         <li><a href="[% c.uri_for('/callflow') %]">[% c.loc('SIP Call Flows') %]</a></li>
