TT#11548 disallow non-pbx customers to create customer soundsets
Change-Id: Ic63f655b469798f1c045e5c538dac957d02c1876
(cherry picked from commit f1e889217c4e13f32ffa8725cdf378169b377b92)

--- a/share/templates/customer/details.tt
+++ b/share/templates/customer/details.tt
@@ -335,6 +335,7 @@
 
     [% IF
         c.config.features.cloudpbx &&
+        product.class == 'pbxaccount' &&
         (c.user.roles == 'admin' || c.user.roles == 'reseller' || c.user.roles == 'subscriberadmin')
     -%]
     <div class="accordion-group">
