TT#5557 timeline views for billing mappings WIP
Change-Id: Ic4e116934bae0c94103b7f155a26931a62858f80

--- a/share/templates/contract/list.tt
+++ b/share/templates/contract/list.tt
@@ -31,6 +31,9 @@ function switchBillingProfileDefinition(field) {
             case 'profiles':
                 hideField('billing_profile');
                 showField('billing_profiles','profile_add');
+                if (typeof window['loadTimeline'] === "function") {
+                    window['loadTimeline']();
+                }
                 switched = 1;
                 break;
             default:
