--- a/share/templates/customer/list.tt
+++ b/share/templates/customer/list.tt
@@ -16,7 +16,7 @@ function showField(id,iddId) {
     $("[id='" + id + ".0']").parents('.control-group').removeClass("hidden");
     if (iddId) {
         $("[id='" + iddId + "']").parents('.control-group').removeClass("hidden");
-    }    
+    }
     $("[name='" + id + ".create']").parents('.control-group').removeClass("hidden");
 }
 function switchBillingProfileDefinition(field) {
@@ -33,6 +33,9 @@ function switchBillingProfileDefinition(field) {
                 hideField('billing_profile');
                 showField('billing_profiles','profile_add');
                 hideField('profile_package');
+                if (typeof window['loadTimeline'] === "function") {
+                    window['loadTimeline']();
+                }
                 switched = 1;
                 break;
             case 'package':
@@ -42,7 +45,7 @@ function switchBillingProfileDefinition(field) {
                 switched = 1;
                 break;
             default:
-            
+
                 break;
         }
     }
@@ -51,48 +54,6 @@ function switchBillingProfileDefinition(field) {
         hideField('billing_profiles','profile_add');
         hideField('profile_package');
     }
-//    var bootstrapMethodField;
-//    if(!vendorField){//initial load - no vendor field passed at all
-//        bootstrapMethodFields = document.getElementsByName('bootstrap_method');
-//        if(bootstrapMethodFields && bootstrapMethodFields.length){
-//            bootstrapMethodField = bootstrapMethodFields[0];//we will use default defined in Perl module to show linked fields
-//            vendorField = bootstrapMethodField.form['vendor'];//for load after error - we will check if it's value isn't empty
-//        }
-//    }else{
-//       bootstrapMethodField = vendorField.form['bootstrap_method'];
-//    }
-//    var bootstrapMethod='';
-//    if(vendorField && vendorField.value){//onchange and on load after error
-//        var vendor = vendorField.value.toLowerCase();
-//        switch(vendor){
-//            case "cisco":
-//                bootstrapMethod = 'http';
-//                break;
-//            ;
-//            default:
-//                bootstrapMethod = 'redirect_'+vendor;
-//                break;
-//            ;
-//        }
-//        if(bootstrapMethod){
-//            var length = bootstrapMethodField.options.length;
-//            var found = false;
-//            for(var i=0; i < length; i++){
-//                if(bootstrapMethodField.options[i].value == bootstrapMethod){
-//                    bootstrapMethodField.options[i].selected = true;
-//                    found = true;
-//                    break;
-//                }
-//            }
-//            if(!found){
-//                bootstrapMethod = '';
-//            }
-//        }
-//    }
-//    if((!bootstrapMethod) && bootstrapMethodField){ //as said above - for initial load, to use Perl defined select default to show linked fields
-//        bootstrapMethod = bootstrapMethodField.options[bootstrapMethodField.selectedIndex].value;
-//    }
-//    bootstrapDynamicFields(bootstrapMethod);
 }
 $( document ).ready(function() {
     switchBillingProfileDefinition(document.getElementById('billing_profile_definition'));
