--- a/share/templates/widgets/reseller_domain_overview.tt
+++ b/share/templates/widgets/reseller_domain_overview.tt
@@ -3,21 +3,21 @@ enqueLists.push([{
     res: 'rwr_sets_count',
     widgetName: "ResellerDomainOverview",
     cb: function(data) {
-        console.log(data);
+        //console.log(data);
         $("#reseller_domain_overview_lazy_items_list").append('<li><strong>' + data.widget_data + '</strong> ' + (data.widget_data == 1 ? '[% c.loc('Rewrite Rule Set') %]' : '[% c.loc('Rewrite Rule Sets') %]') + '</li>');
     }
 },{
     res: 'sound_sets_count',
     widgetName: "ResellerDomainOverview",
     cb: function(data) {
-        console.log(data);
+        //console.log(data);
         $("#reseller_domain_overview_lazy_items_list").append('<li><strong>' + data.widget_data + '</strong> ' + (data.widget_data == 1 ? '[% c.loc('Sound Set') %]' : '[% c.loc('Sound Sets') %]') + '</li>');
     }
 },{
     res: 'domains_count',
     widgetName: "ResellerDomainOverview",
     cb: function(data) {
-        console.log(data);
+        //console.log(data);
         $("#reseller_domain_overview_lazy_loading").remove();
         $("#reseller_domain_overview_lazy_items_header").append(
             '<div class="plan-price">' +
