--- a/share/templates/widgets/admin_billing_overview.tt
+++ b/share/templates/widgets/admin_billing_overview.tt
@@ -3,28 +3,28 @@ enqueLists.push([{
     res: 'peering_sum',
     widgetName: "AdminBillingOverview",
     cb: function(data) {
-        console.log(data);
+        //console.log(data);
         $("#admin_billing_overview_lazy_items_list").append('<li><strong>' + sprintf('%.02f',data.widget_data / 100.0) + '</strong> [% c.loc('Peering Costs') %]</li>');
     }
 },{
     res: 'reseller_sum',
     widgetName: "AdminBillingOverview",
     cb: function(data) {
-        console.log(data);
+        //console.log(data);
         $("#admin_billing_overview_lazy_items_list").append('<li><strong>' + sprintf('%.02f',data.widget_data / 100.0) + '</strong> [% c.loc('Reseller Revenue') %]</li>');
     }
 },{
     res: 'customer_sum',
     widgetName: "AdminBillingOverview",
     cb: function(data) {
-        console.log(data);
+        //console.log(data);
         $("#admin_billing_overview_lazy_items_list").append('<li><strong>' + sprintf('%.02f',data.widget_data / 100.0) + '</strong> [% c.loc('Customer Revenue') %]</li>');
     }
 },{
     res: 'profiles_count',
     widgetName: "AdminBillingOverview",
     cb: function(data) {
-        console.log(data);
+        //console.log(data);
         $("#admin_billing_overview_lazy_loading").remove();
         $("#admin_billing_overview_lazy_items_header").append(
             '<div class="plan-price">' +
