--- a/share/templates/widgets/admin_peering_overview.tt
+++ b/share/templates/widgets/admin_peering_overview.tt
@@ -3,21 +3,21 @@ enqueLists.push([{
     res: 'hosts_count',
     widgetName: "AdminPeeringOverview",
     cb: function(data) {
-        console.log(data);
+        //console.log(data);
         $("#admin_peering_overview_lazy_items_list").append('<li><strong>' + data.widget_data + '</strong> ' + (data.widget_data == 1 ? '[% c.loc('Peering Server') %]' : '[% c.loc('Peering Servers') %]') + '</li>');
     }
 },{
     res: 'rules_count',
     widgetName: "AdminPeeringOverview",
     cb: function(data) {
-        console.log(data);
+        //console.log(data);
         $("#admin_peering_overview_lazy_items_list").append('<li><strong>' + data.widget_data + '</strong> ' + (data.widget_data == 1 ? '[% c.loc('Peering Rule') %]' : '[% c.loc('Peering Rules') %]') + '</li>');
     }
 },{
     res: 'groups_count',
     widgetName: "AdminPeeringOverview",
     cb: function(data) {
-        console.log(data);
+        //console.log(data);
         $("#admin_peering_overview_lazy_loading").remove();
         $("#admin_peering_overview_lazy_items_header").append(
             '<div class="plan-price">' +
