--- a/share/templates/widgets/reseller_billing_overview.tt
+++ b/share/templates/widgets/reseller_billing_overview.tt
@@ -3,21 +3,21 @@ enqueLists.push([{
     res: 'reseller_sum',
     widgetName: "ResellerBillingOverview",
     cb: function(data) {
-        console.log(data);
+        //console.log(data);
         $("#reseller_billing_overview_lazy_items_list").append('<li><strong>' + sprintf('%.02f',data.widget_data / 100.0) + '</strong> [% c.loc('Reseller Cost') %]</li>');
     }
 },{
     res: 'customer_sum',
     widgetName: "ResellerBillingOverview",
     cb: function(data) {
-        console.log(data);
+        //console.log(data);
         $("#reseller_billing_overview_lazy_items_list").append('<li><strong>' + sprintf('%.02f',data.widget_data / 100.0) + '</strong> [% c.loc('Customer Revenue') %]</li>');
     }
 },{
     res: 'profiles_count',
     widgetName: "ResellerBillingOverview",
     cb: function(data) {
-        console.log(data);
+        //console.log(data);
         $("#reseller_billing_overview_lazy_loading").remove();
         $("#reseller_billing_overview_lazy_items_header").append(
             '<div class="plan-price">' +
