MT#16806 show maintenance mode banner
Change-Id: If3dedeb96c8711b1ca7fab3db573e62ec2434c7b

--- a/share/layout/body.tt
+++ b/share/layout/body.tt
@@ -75,6 +75,11 @@
     </div>
     <div id="content">
         <div class="container">
+            [% IF c.config.general.maintenance_mode -%]
+                <div class="alert alert-error" style="font-size:150%">
+                    <strong>[% c.loc('Maintenance mode is enabled! Please do not perform any write operations until maintenance mode has been switched off!') %]</strong>
+                </div>
+            [% END -%]
             [% content %]
         </div>
     </div>
