--- a/share/templates/subscriber/preferences.tt
+++ b/share/templates/subscriber/preferences.tt
@@ -659,6 +659,7 @@ $( document ).ready(function() {
                         <tr>
                             <th>[% c.loc('Time') %]</th>
                             <th>[% c.loc('Recurrence') %]</th>
+                            <th>[% c.loc('Active') %]</th>
                             [% # one for actions -%]
                             <th class="ngcp-actions-column"></th>
                         </tr>
@@ -670,6 +671,9 @@ $( document ).ready(function() {
                             </td>
                             <td>
                                 [% subscriber.provisioning_voip_subscriber.voip_reminder.recur %]
+                            </td>
+                            <td>
+                                [% subscriber.provisioning_voip_subscriber.voip_reminder.active %]
                             </td>
                             <td class="ngcp-actions-column">
                                 <div class="sw_actions">
