--- a/share/templates/widgets/admin_topmenu_settings.tt
+++ b/share/templates/widgets/admin_topmenu_settings.tt
@@ -56,9 +56,10 @@
         <li><a href="[% c.uri_for('/domain') %]">[% c.loc('Domains') %]</a></li>
         <li><a href="[% c.uri_for('/subscriber') %]">[% c.loc('Subscribers') %]</a></li>
         <li><a href="[% c.uri_for('/subscriberprofile') %]">[% c.loc('Subscriber Profiles') %]</a></li>
+        <li><a href="[% c.uri_for('/calllistsuppression') %]">[% c.loc('Call List Suppressions') %]</a></li>
         <li><a href="[% c.uri_for('/billing') %]">[% c.loc('Billing') %]</a></li>
         <li><a href="[% c.uri_for('/network') %]">[% c.loc('Billing Networks') %]</a></li>
-        <li><a href="[% c.uri_for('/package') %]">[% c.loc('Profile Packages') %]</a></li>        
+        <li><a href="[% c.uri_for('/package') %]">[% c.loc('Profile Packages') %]</a></li>
         <li><a href="[% c.uri_for('/invoicetemplate') %]">[% c.loc('Invoice Templates') %]</a></li>
         <li><a href="[% c.uri_for('/invoice') %]">[% c.loc('Invoices') %]</a></li>
         [% IF c.config.features.voucher -%]
