TT#17068 Move # processing to TT
Preserve phone number string for further masking

Change-Id: I04844a3070233bd72cc3fafbe194efa9a970bc25
(cherry picked from commit fd79802c3d2e502f9e31b231dfad8df154801249)

--- a/share/templates/invoice/default/invoice_template_aux.tt
+++ b/share/templates/invoice/default/invoice_template_aux.tt
@@ -93,7 +93,7 @@
                 END;
                 IF f.masklen;
                     l = f.masklen > val.length ? val.length : f.masklen;
-                    val = val.substr(l - 1, val.length - 1, f.mask);
+                    val = val.substr(l - 1, val.length - 1, f.mask) | html_entity('<>&"#');
                 END;
                 '<text font-family="' _ fontfamily  _ '" font-size="' _ fontsize  _ apply_units('fontsize') _ '" x="' _ x _ apply_units('position') _ '" y="' _ y _ apply_units('position') _ '" text-anchor="'_ anc _'">';
                     val;
