--- a/share/templates/widgets/admin_system_overview.tt
+++ b/share/templates/widgets/admin_system_overview.tt
@@ -54,7 +54,7 @@ enqueLists.push([{
             </ul>
         </div>
         <div class="plan-actions">
-            <a href="[% c.uri_for('/statistics') %]" class="btn">[% c.loc('View Statistics') %]</a>
+            <a href="/grafana/dashboard/file/system-statistics.json" class="btn">[% c.loc('View Statistics') %]</a>
         </div>
     </div>
 </div>
