TT#22411 Fix spelling mistakes/typos
s/Diffrent/Different/
s/If it mathes/If it matches/
s/addreses/addresses/
s/altough/although/
s/autenticate/authenticate/
s/curently/currently/
s/dont't/don't/
s/dont/don't/
s/existance/existence/
s/explicitely/explicitly/
s/in in/in/
s/lenght/length/
s/neccessary/necessary/
s/occured/occurred/
s/occurence/occurrence/
s/packge/package/
s/paramters/parameters/
s/perfomed/performed/
s/propery/property/
s/recieve/receive/
s/reponse/response/
s/sematical/semantical/
s/serie /series /
s/than than/than/
s/the the/the/
s/underun/underrun/
s/wether/whether/
s/wihout/without/

NOTE: Ignoring stuff in share/static + debian/changelog though

Change-Id: I90fe718c92582eedf9325d2df3c3280f5f25afd7

--- a/share/templates/api/root/collection.tt
+++ b/share/templates/api/root/collection.tt
@@ -374,7 +374,7 @@ END%]
         </li>
         <li>
             <b>copy, move</b>
-            <p>Copies or moves (copy, then remove) the value from property defined by <b>from</b> to the propery defined by <b>path</b>.</p>
+            <p>Copies or moves (copy, then remove) the value from property defined by <b>from</b> to the property defined by <b>path</b>.</p>
         </li>
     </ul>
 </p>
