--- a/share/templates/notfound_page.tt
+++ b/share/templates/notfound_page.tt
@@ -9,7 +9,7 @@
 			<h2>[% c.loc('[_1] Not found', c.response.status) %]</h2>
 			
 			<div class="error-details">
-				[% c.loc('Sorry, an error has occured, Requested page not found!') %]
+				[% c.loc('Sorry, an error has occurred, Requested page not found!') %]
 				
 			</div> <!-- /error-details -->
 			
