TT#21818 Check passwords against libcrack and user
* When enabling password_sip/web_validate, panel checks password
  against username (web and sip, respectively), and runs it through
  cracklib to enforce a reasonably strong password.
* Add auto-generate buttons next to web/sip password.

Change-Id: I11f5f6c2d69dc5658f298094f7d17d26d0a26ee1

--- a/share/templates/customer/details.tt
+++ b/share/templates/customer/details.tt
@@ -731,6 +731,7 @@ $(function() {
     modal_footer();
     modal_script(m.close_target = close_target);
 -%]
+<script src="/js/libs/ngcp-pwdgen.js"></script>
 [% ELSIF edit_flag == 1 -%]
 [%
     IF form.has_for_js;
