TT#66754 - Implement panel statistics
	 * Retrieve statistics details from
	   ngcp-collective-check

	 * Restore statistics widget to display
	   either "All services running", "Errors"
	   or "Warnings" according to collective-
	   check result

	 * Create pop-up modal to display ngcp-
	   collective-check results

Change-Id: I094a51ad1905d2bf968775dd43480c94a7a440b8

--- a/share/static/css/main.css
+++ b/share/static/css/main.css
@@ -503,6 +503,14 @@ div.ngcp-modal .control-group.error .dataTables_wrapper input[type="text"] {
     color:#0f0;
 }
 
+.plan .ngcp-orage-warning {
+    color:#ff6700;
+}
+
+.plan .ngcp-red-error {
+    color:#ff0000;
+}
+
 .ngcp-quickform div.form-actions {
     padding-left: 0px;
 }
