TT#66754 - Implement panel statistics WIP
Change-Id: I094a51ad1905d2bf968775dd43480c94a7a440b8

--- a/share/templates/widgets/admin_system_overview.tt
+++ b/share/templates/widgets/admin_system_overview.tt
@@ -54,7 +54,7 @@ enqueLists.push([{
             </ul>
         </div>
         <div class="plan-actions">
-            <a href="/grafana/dashboard/file/system-statistics.json" class="btn">[% c.loc('View Statistics') %]</a>
+            <a href="/grafana/dashboard/file/system-statistics" class="btn">[% c.loc('View Statistics') %]</a>
         </div>
     </div>
 </div>
