--- a/share/templates/widgets/admin_system_overview.tt
+++ b/share/templates/widgets/admin_system_overview.tt
@@ -8,37 +8,31 @@ enqueLists.push([{
         var col = (data.widget_data > 0 ? "#FFC200" : "#000");
         $("#admin_system_overview_lazy_items_list").prepend('<li>[% c.loc('Applications') %] <strong style="color:' + col + '">' + txt + '</strong></li>');
     }
-},{
-    res: 'system_status',
-    widgetName: "AdminSystemOverview",
-    cb: function(data) {
-        //console.log(data);
-        var txt = data.widget_data.text;
-        var col = data.widget_data.color;
-        $("#admin_system_overview_lazy_items_list").append('<li>[% c.escape_js(c.loc('System')) %] <strong style="color:' + col + '">' + txt + '</strong></li>');
-    }
-},{
-    res: 'hardware',
-    widgetName: "AdminSystemOverview",
-    cb: function(data) {
-        //console.log(data);
-        var txt = data.widget_data.text;
-        var col = data.widget_data.color;
-        $("#admin_system_overview_lazy_items_list").append('<li>[% c.escape_js(c.loc('Hardware')) %] <strong style="color:' + col + '">' + txt + '</strong></li>');
-    }
-},{
+},
+{
     res: 'overall_status',
     widgetName: "AdminSystemOverview",
     cb: function(data) {
         //console.log(data);
         var txt = data.widget_data.text;
         var cls = data.widget_data.class;
+        var ngcp_status = data.widget_data.data;
         $("#admin_system_overview_lazy_loading").remove();
         $("#admin_system_overview_lazy_items_header").append(
             '<div class="plan-price">' +
                 '<span class="' + cls + '">&#9702;</span>' +
-                '<span class="term">' + txt + '</span>' +
+                '<span class="term"></span>' +
             '</div>');
+        $("#admin_system_overview_lazy_items_list").prepend(
+            '<li>[% c.loc('Status') %]: <strong>' + txt + ' </strong>' +
+            '<a data-toggle="modal" href="#statistics_modal">(details)</a></li>'
+        );
+        $.each( ngcp_status, function( i, val ) {
+            $("#statistics_modal_content").append( "<h2>" + val.title + "</h2>" );
+            $.each( val.messages, function( i, message ) {
+                $("#statistics_modal_content").append( "<p>" + message + "</p>" );
+            });
+        });
     }
 }]);
 </script>
@@ -54,8 +48,20 @@ enqueLists.push([{
             </ul>
         </div>
         <div class="plan-actions">
-            <a href="/grafana/dashboard/file/system-statistics.json" class="btn">[% c.loc('View Statistics') %]</a>
+            <a href="/grafana/dashboard/file/system-statistics" class="btn">[% c.loc('View Statistics') %]</a>
         </div>
     </div>
+</div>
+
+<div id="statistics_modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="statistics_modal_label" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="statistics_modal_label">Messages</h3>
+  </div>
+  <div id="statistics_modal_content" class="modal-body">
+  </div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+  </div>
 </div>
 [% # vim: set tabstop=4 syntax=html expandtab: -%]
