--- a/share/templates/widgets/admin_system_overview.tt
+++ b/share/templates/widgets/admin_system_overview.tt
@@ -8,25 +8,8 @@ enqueLists.push([{
         var col = (data.widget_data > 0 ? "#FFC200" : "#000");
         $("#admin_system_overview_lazy_items_list").prepend('<li>[% c.loc('Applications') %] <strong style="color:' + col + '">' + txt + '</strong></li>');
     }
-},{
-    res: 'system_status',
-    widgetName: "AdminSystemOverview",
-    cb: function(data) {
-        //console.log(data);
-        var txt = data.widget_data.text;
-        var col = data.widget_data.color;
-        $("#admin_system_overview_lazy_items_list").append('<li>[% c.escape_js(c.loc('System')) %] <strong style="color:' + col + '">' + txt + '</strong></li>');
-    }
-},{
-    res: 'hardware',
-    widgetName: "AdminSystemOverview",
-    cb: function(data) {
-        //console.log(data);
-        var txt = data.widget_data.text;
-        var col = data.widget_data.color;
-        $("#admin_system_overview_lazy_items_list").append('<li>[% c.escape_js(c.loc('Hardware')) %] <strong style="color:' + col + '">' + txt + '</strong></li>');
-    }
-},{
+},
+{
     res: 'overall_status',
     widgetName: "AdminSystemOverview",
     cb: function(data) {
@@ -54,7 +37,7 @@ enqueLists.push([{
             </ul>
         </div>
         <div class="plan-actions">
-            <a href="/grafana/dashboard/file/system-statistics.json" class="btn">[% c.loc('View Statistics') %]</a>
+            <a href="/grafana/dashboard/file/system-statistics" class="btn">[% c.loc('View Statistics') %]</a>
         </div>
     </div>
 </div>
