--- a/share/templates/customer/details.tt
+++ b/share/templates/customer/details.tt
@@ -68,7 +68,7 @@ $(function() {
         <a class="btn btn-primary btn-large" href="[% c.uri_for_action('/customer/preferences', [c.req.captures.0]) %]"><i class="icon-list"></i> [% c.loc('Preferences') %]</a>
     </span>
     [% IF (c.user.roles == 'admin' || c.user.roles == 'reseller' ||
-           c.user.roles == 'ccaradmin' || c.user.roles == 'ccare') && !c.user.read_only -%]
+           c.user.roles == 'ccareadmin' || c.user.roles == 'ccare') && !c.user.read_only -%]
     <span>
         <a class="btn btn-primary btn-large" href="[% c.uri_for_action('/customer/edit', [ contract.id ]) %]"><i class="icon-edit"></i> [% c.loc('Edit') %]</a>
     </span>
@@ -240,7 +240,7 @@ $(function() {
                     </div>
                 [% ELSIF (c.user.roles == "subscriberadmin" && product.class == "pbxaccount") ||
                           c.user.roles == "admin" || c.user.roles == "reseller" ||
-                          c.user.roles == "ccaradmin" || c.user.roles == "ccare" -%]
+                          c.user.roles == "ccareadmin" || c.user.roles == "ccare" -%]
                     <a class="btn btn-large btn-primary" href="[% c.uri_for_action('/customer/subscriber_create', [ c.req.captures.0 ]) %]">
                         <i class="icon-star"></i> [% c.loc('Create Subscriber') %]
                     </a>
@@ -397,7 +397,7 @@ $(function() {
         c.config.features.cloudpbx &&
         product.class == 'pbxaccount' &&
         (c.user.roles == 'admin' || c.user.roles == 'reseller' ||
-         c.user.roles == 'ccaradmin' || c.user.roles == 'ccare' ||
+         c.user.roles == 'ccareadmin' || c.user.roles == 'ccare' ||
          c.user.roles == 'subscriberadmin')
     -%]
     <div class="accordion-group">
@@ -444,7 +444,7 @@ $(function() {
             <div class="accordion-inner">
 
                 [% IF (c.user.roles == 'admin' || c.user.roles == 'reseller' ||
-                       c.user.roles == 'ccaradmin' || c.user.roles == 'ccare') && !c.user.read_only -%]
+                       c.user.roles == 'ccareadmin' || c.user.roles == 'ccare') && !c.user.read_only -%]
                 <span>
                     [% IF c.user.billing_data -%]
                     <a class="btn btn-primary btn-large" href="[% c.uri_for_action("/customer/topup_voucher", [contract.id]) %]"><i class="icon-repeat"></i> [% c.loc('Top-up Voucher') %]</a>
