TT#66754 - Improve NGCP Panel Statistics UI
	 * Remove '(details)' and make the status
	   text clickable

	 * If no errors, don't make status clickable
	   and not show the modal

Change-Id: I1ae1d05231aea450f99649996acdb63fcd2e6f75

--- a/share/templates/widgets/admin_system_overview.tt
+++ b/share/templates/widgets/admin_system_overview.tt
@@ -24,9 +24,16 @@ enqueLists.push([{
                 '<span class="term"></span>' +
             '</div>');
         $("#admin_system_overview_lazy_items_list").prepend(
-            '<li>[% c.loc('Status') %]: <strong>' + txt + ' </strong>' +
-            '<a data-toggle="modal" href="#statistics_modal">(details)</a></li>'
+            '<li>[% c.loc('Status') %]: <strong id="status_text"></strong></li>'
         );
+        if (ngcp_status) {
+            $("#status_text").append(
+                '<a data-toggle="modal" href="#statistics_modal">' + txt + '</a>'
+            );
+        }
+        else{
+            $("#status_text").append(txt);
+        }
         $.each( ngcp_status, function( i, val ) {
             $("#statistics_modal_content").append( "<h2>" + val.title + "</h2>" );
             $.each( val.messages, function( i, message ) {
