TT#65503 - Introduce time picker
	 * Change datepicker to datetimepicker
	   to be able to select time as well

	 * datetimepicker is now available only
	   for call lists since this is where
	   a more thorough filtering is needed
	   in case the limit of 1000 entries is
	   passed

Change-Id: I48107fa8f7c4d4ee9b40044c8ae5f7842e35c2a5
(cherry picked from commit 7a61d765d2d09313ef2314b2f558a3345f9667fd)

--- a/share/templates/helpers/datatables.tt
+++ b/share/templates/helpers/datatables.tt
@@ -238,8 +238,9 @@ $(document).ready(function() {
                         [% IF col.search_from_epoch && !has_from -%]
                             var f = '<label>From Date: <input type="text" id="[% helper.id_from_name %]_datepicker_start" class="ngcp-datepicker" rel="tooltip" data-original-title="YYYY-MM-DD"/></label>';
                             $('#[% helper.id_from_name %]_table_filter').prepend(f);
-                            $('#[% helper.id_from_name %]_datepicker_start').datepicker({
+                            $('#[% helper.id_from_name %]_datepicker_start').datetimepicker({
                                 "dateFormat": "yy-mm-dd",
+                                showTimepicker: [% IF col.search_datetime %] true [% ELSE %] false [% END %],
                                 "onSelect": function(date) {
                                     [% helper.id_from_name %]_table.fnFilter(date, 0);
                                 }
@@ -255,8 +256,9 @@ $(document).ready(function() {
                             } else {
                                 $('#[% helper.id_from_name %]_table_filter').prepend(t);
                             }
-                            $('#[% helper.id_from_name %]_datepicker_end').datepicker({
+                            $('#[% helper.id_from_name %]_datepicker_end').datetimepicker({
                                 "dateFormat": "yy-mm-dd",
+                                showTimepicker: [% IF col.search_datetime %] true [% ELSE %] false [% END %],
                                 "onSelect": function(date) {
                                     [% helper.id_from_name %]_table.fnFilter(date, 1);
                                 }
