--- a/share/templates/helpers/datatables.tt
+++ b/share/templates/helpers/datatables.tt
@@ -67,6 +67,9 @@ $(document).ready(function() {
         "bPaginate": [% helper.paginate || 'true' %],
         "bFilter": [% helper.filter || 'true' %],
         "bStateSave": true,
+        "stateSaveParams": function (settings, data) {
+            data.search.search = "";
+        },
         "iStateDuration": 0,
 
         "sPaginationType": "bootstrap",
@@ -81,7 +84,6 @@ $(document).ready(function() {
         "iDisplayLength": 5,
         "iShowPages": 5,
         "sAjaxSource": "[% helper.ajax_uri %]",
-        "bStateSave": false,
         "searchDelay": 800,
         [% IF helper.column_sort -%]
             "aaSorting": [
