TT#72408 Don't allow permanent reg with negative q-value
Even if kamailo supports negative q-value it will handle them
as positive one creating confusion in customers.

Change-Id: Ia74f798c48191af1aacca5660448b664883b9860

--- a/share/templates/subscriber/master.tt
+++ b/share/templates/subscriber/master.tt
@@ -285,7 +285,9 @@ function process_pbx_items(moveId,direction){
 [%
     helper.name = c.loc('Registered Devices');
     helper.identifier = 'registered_devices';
-    #helper.column_sort = 'origtime';
+    helper.column_sort = 'q';
+    helper.column_sort_order = 'desc';
+
     helper.dt_columns = reg_dt_columns;
 
     helper.close_target = close_target;
