TT#72408 Don't allow permanent reg with negative q-value
Even if kamailo supports negative q-value it will handle them
as positive one creating confusion in customers.

Change-Id: Ia74f798c48191af1aacca5660448b664883b9860

--- a/share/templates/helpers/datatables.tt
+++ b/share/templates/helpers/datatables.tt
@@ -89,7 +89,10 @@ $(document).ready(function() {
                 FOR f IN helper.column_fields;
                     IF helper.column_sort == f;
             -%]
-                [ [% loop.index %], "asc" ],
+                [
+                    [% loop.index %],
+                    '[% helper.column_sort_order || "asc" %]'
+                ],
             [%
                     END;
                 END;
