--- a/share/templates/widgets/admin_topmenu_settings.tt
+++ b/share/templates/widgets/admin_topmenu_settings.tt
@@ -40,6 +40,7 @@
         <li>
             <a href="[% c.uri_for('/callroutingverify') %]">[% c.loc('Call Routing Verification') %]</a>
             <a href="[% c.uri_for('/peeringoverview') %]">[% c.loc('Peering Overview') %]</a>
+            <a href="[% c.uri_for('/job') %]">[% c.loc('Jobs') %]</a>
         </li>
     </ul>
 </li>
