--- a/share/templates/widgets/ccareadmin_topmenu_settings.tt
+++ b/share/templates/widgets/ccareadmin_topmenu_settings.tt
@@ -13,6 +13,18 @@
 </li>
 <li class="dropdown">
     <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
+        <i class="icon-cog"></i>
+        <span>[% c.loc('Tools') | html %]</span>
+        <b class="caret"></b>
+    </a>
+    <ul class="dropdown-menu">
+        <li>
+            <a href="[% c.uri_for('/batchprovisioning') %]">[% c.loc('Batch Provisioning') %]</a>
+        </li>
+    </ul>
+</li>
+<li class="dropdown">
+    <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
         <i class="icon-th"></i>
         <span>[% c.loc('Settings') %]</span>
         <b class="caret"></b>
