--- a/share/templates/widgets/subscriber_topmenu_settings.tt
+++ b/share/templates/widgets/subscriber_topmenu_settings.tt
@@ -16,4 +16,16 @@
         [% END -%]
     </ul>
 </li>
+<li class="dropdown">
+    <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
+        <i class="icon-cog"></i>
+        <span>[% c.loc('Tools') | html %]</span>
+        <b class="caret"></b>
+    </a>
+    <ul class="dropdown-menu">
+        <li>
+            <a href="[% c.uri_for('/batchprovisioning') %]">[% c.loc('Batch Provisioning') %]</a>
+        </li>
+    </ul>
+</li>
 [% # vim: set tabstop=4 syntax=html expandtab: -%]
